# nessai-torch

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
examples/: rosenbrock.py
src/nessai_torch/: __init__.py  evidence.py  flows.py  plot.py  sampler.py  tensorlist.py  transforms.py
src/nessai_torch/plugins/: bilby.py
src/nessai_torch/proposal/: base.py  flow.py  prior.py  spherical.py
src/nessai_torch/utils/: bounds.py  gammaincinv.py  io.py  logging.py  maths.py  sample.py  stats.py
tests/: conftest.py  test_plot.py
tests/integration_tests/: test_sampling.py
tests/test_plugins/: test_bilby_plugin.py
tests/test_utils/: test_gammaincinv.py  test_io.py  test_sample.py
