
[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nessai-torch"
authors = [
    {name = "Michael J. Williams", email = "michaeljw1@googlemail.com"},
]
description = "nessai in pure PyTorch"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "glasflow",
    "h5py",
    "scipy",
    "matplotlib",
    "numpy",
    "torch",
]

dynamic = ["version"]

[project.optional-dependencies]
plot = [
    "corner",
]
dev = [
    "corner",
    "pytest",
]

[tool.setuptools_scm]

[tool.black]
line-length = 79
